fix(display): fixed circle alignment with text

--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,7 @@ li {
   width: 12px;
   height: 12px;
   margin-right: 8px;
+  margin-bottom: 8px;
   border-radius: 50%;
   background-color: var(--circle-color);
 }
